add repositories and migrations; add competitions

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -6,6 +6,8 @@
 <configuration>
   <appSettings>
     <add key="Pi" value="3.1416" />
+    <add key="Db.ConnectionString" value="Server=localhost,1433;Database=Snails;Integrated Security=True;" />
+    <!--<add key="Db.ConnectionString" value="Server={DbHost},{DbPort};Database={DbName};User Id={DbUser};Password={DbPassword};" />-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
