--- a/WebApplication1/Snails.Api.csproj
+++ b/WebApplication1/Snails.Api.csproj
@@ -125,10 +125,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CompetitionsController.cs" />
     <Compile Include="Controllers\SnailsController.cs" />
     <Compile Include="CrossDomain\AuthenticationFilterAttribute.cs" />
     <Compile Include="CrossDomain\ExampleDelegatingHandler.cs" />
     <Compile Include="CrossDomain\GlobalErrorHandler.cs" />
+    <Compile Include="CrossDomain\Settings.cs" />
     <Compile Include="CrossDomain\SnailIdentity.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
